<resources>
    <string name="app_name">Medication Voice Reminder</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="close_button" translatable="false">Close button register activity</string>

    <!--Register and login errors-->
    <string name="login_error">Enter both credentials.</string>
    <string name="invalid_email">Your email is invalid.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="enter_email_err">Please enter your email.</string>
    <string name="reset_email_err">Failed to send reset email.</string>
    <string name="all_fields_required_err">All fields are required.</string>
    <string name="fullname_err">Enter your full name.</string>
    <string name="pesel_err">Your pesel is invalid.</string>
    <string name="password_length_err">Your password should have at least 6 characters.</string>
    <string name="passwords_not_match_err">Both password does not match.</string>
    <string name="terms_err">Please select Terms and Conditions.</string>
    <string name="sth_went_wrong_err">Something went wrong with registration, check your connection.</string>

    <string name="action_settings">Settings</string>
    <string name="bottom_nav_medications">Medications</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_reminders">Reminders</string>
    <string name="bottom_nav_prescriptions">Prescriptions</string>
    <string name="bottom_nav_history">History</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="general_settings">General</string>
    <string name="settings">Settings</string>
    <string name="enable_speak_notifications">Speak notifications</string>
    <string name="enable_speak_notifications_dialog">Do you want to speak notifications from this application loud?</string>
    <string name="speak_notifications_settings">Notification settings</string>
    <string name="text_to_speech_settings">Text to speech settings</string>
    <string name="profile_settings">Profile</string>

    <string name="add_medication_reminder">Add medication reminder</string>
    <string name="add_medication_btn">Add medication</string>

    <string name="speak_notification_settings_title">Read application notification during this device state</string>
    <string-array name="speak_notifications_settings_dialog">
        <item>Screen On</item>
        <item>Screen Off</item>
        <item>Silent/Vibrate</item>
    </string-array>

    <string name="add_medication_title">Add medication</string>
    <string name="edit_medication_title">Edit medication</string>
    <string name="medication_name">Medication Name</string>
    <string name="medication_days">Schedule</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string name="every_day">Every day</string>
    <string name="med_name_hint">Medication name</string>
    <string name="delete_med_dialog_title">Do you really want to delete this reminder?</string>

    <string name="err_msg_medication_name">Enter medication name</string>
    <string name="err_msg_medication_schedule">Select at least one day</string>
    <string name="err_msg_medication_dose">Dose must be greater than 0</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pswd">Show Password</string>
    <string name="hide_pswd">Hide Password</string>
    <string name="forgot_pswd">Forgot password?</string>
    <string name="new_user">Not a Member yet? Sign Up here.</string>
    <string name="full_name">Full Name</string>
    <string name="pesel">Pesel</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_email">Please enter your Registered Email below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="registration_successful">Account has been successfully created!</string>
    <string name="logout">Logout</string>
    <string name="forgot_pswd_send">We have sent you instructions to reset your password on email!</string>
    <string name="no_data">No data</string>

    <!--Notifications-->
    <string name="take">Take</string>
    <string name="notification_from">Notification from </string>
    <string name="notification_it_says">It says: take </string>
    <string name="notification_dosage"> the dosage is </string>
    <string name="new_medication">You have new medication prescribed. </string>
    <string name="new_prescription_title">You have new prescription!</string>
    <string name="new_prescription">You have new prescription prescribed by doctor</string>
    <string name="realize_prescription_to">Realize prescription to </string>
    <string name="new_medication_name">Medication name is</string>

    <!--Prescription fragment-->
    <string name="prescription">Prescription</string>
    <string name="realize_to">Realize to:</string>
    <string name="set_by">Set by:</string>
    <string name="medications_list">Medications:</string>

    <!--AddMedicationActivity toast msgs-->
    <string name="medication">Medication</string>
    <string name="medication_saved">has been saved</string>
    <string name="medication_edited">Medication has been edited</string>
    <string name="medication_exists">There is a medication with such parameters</string>
    <string name="medication_unidentified_err">Something went wrong in saving</string>

    <string name="capsule">capsule(s)</string>
    <string name="cream">cream(s)</string>
    <string name="dragee">dragee(s)</string>
    <string name="emulsion">emulsion(s)</string>
    <string name="pack">pack(s)</string>
    <string name="gel">gel(s)</string>
    <string name="drop">drop(s)</string>
    <string name="inhalation">inhalation(s)</string>
    <string name="shot">shot(s)</string>
    <string name="measure">measure(s)</string>
    <string name="tablet">tablet(s)</string>
    <string name="powder">powder(s)</string>
    <string name="ointment">ointment(s)</string>
    <string name="sachet">sachet(s)</string>
    <string name="unit">unit(s)</string>
    <string name="spray">spray(s)</string>
    <string name="suspension">suspension(s)</string>
    <string name="syrup">syrup(s)</string>

    <string-array name="medication_type_array">
        <item>@string/capsule</item>
        <item>@string/cream</item>
        <item>@string/dragee</item>
        <item>@string/emulsion</item>
        <item>@string/pack</item>
        <item>@string/gel</item>
        <item>@string/drop</item>
        <item>@string/inhalation</item>
        <item>@string/shot</item>
        <item>@string/tablet</item>
        <item>@string/powder</item>
        <item>@string/sachet</item>
        <item>@string/unit</item>
        <item>@string/spray</item>
        <item>@string/suspension</item>
        <item>@string/syrup</item>
        <item>@string/ointment</item>
        <item>@string/measure</item>
    </string-array>
</resources>
