<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/profile_settings"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="Profile" />
            </group>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_enable_speak_notifications"
                android:title="@string/enable_speak_notifications"
                android:icon="@drawable/ic_notifications_black_24dp" />
            <!--<item-->
                <!--android:id="@+id/nav_speak_notification_settings"-->
                <!--android:icon="@android:drawable/ic_lock_silent_mode_off"-->
                <!--android:title="@string/speak_notifications_settings" />-->
            <item
                android:id="@+id/nav_text_to_speech"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/text_to_speech_settings" />
        </menu>
    </item>

</menu>