<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_nav_reminders" />

    <item
        android:id="@+id/navigation_medications"
        android:icon="@drawable/ic_pills_white"
        android:title="@string/bottom_nav_medications" />

    <item
        android:id="@+id/navigation_prescriptions"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/bottom_nav_prescriptions" />

    <!--<item-->
        <!--android:id="@+id/navigation_history"-->
        <!--android:icon="@android:drawable/ic_menu_camera"-->
        <!--android:title="title_profile" />-->

</menu>
