<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_add_medicine"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:attr/actionBarSize"

            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/medication_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/med_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputLayoutAppearance"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/med_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:hint="@string/med_name_hint"
                            android:maxLines="2" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/activity_vertical_margin">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/medication_days"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />


                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/every_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/every_day"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/checkbox_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/dayPicker_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ca.antonious.materialdaypicker.MaterialDayPicker
                                android:id="@+id/dayPicker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="parent" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/med_dose_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:hintEnabled="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/medication_reminder"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/text_medium"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_vertical_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/medicine_time"
                                style="@android:style/Widget.EditText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:focusable="false"
                                android:fontFamily="sans-serif"
                                android:gravity="center"
                                android:padding="8dp"
                                android:textColor="#4d4d4d"
                                android:textSize="@dimen/text_medium" />


                            <EditText
                                android:id="@+id/dose_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:fontFamily="sans-serif"
                                android:gravity="center"
                                android:inputType="numberDecimal"
                                android:padding="8dp"
                                android:text="1.0" />

                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/spinner_dose_units"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_weight="1"
                                android:entries="@array/medication_type_array" />

                        </LinearLayout>
                    </LinearLayout>
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">


                <Button
                    android:id="@+id/save_med_btn"
                    style="@style/roundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:shadowColor="#A8A8A8"
                    android:text="@string/save"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>
